--- a/now.json
+++ b/now.json
@@ -1,7 +1,6 @@
 {
-  "build": {
-    "env": {
-      "PHISHIN_API_KEY": "@phishin_api_key"
-    }
+  "name": "phish-player",
+  "env": {
+    "PHISHIN_API_KEY": "@phishin_api_key"
   }
 }
