--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Zach Weinberg",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "next": "^9.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5"
   }
 }
