--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "immer": "^5.3.4",
     "next": "^9.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
